new href on head's link for page2 +minor changes

--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="Title bloc 4" src="img/title2.png" />
+			<h2><img alt="Title bloc 4" src="img/title2.png" /></h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-		<h2><a href="#" data-lightbox="img/1.webp" 	data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="photographie de journal" class="img-responsive portfolio-thumb" /></a>
-				</h2>
+			<a href="#" data-lightbox="img/1.webp"  data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="photographie de journal" class="img-responsive portfolio-thumb" /></a>
+				
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
