--- a/page2.html
+++ b/page2.html
@@ -8,10 +8,10 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
 	<script src="./js/jquery-2.1.0.min.js" defer ></script>
@@ -121,7 +121,7 @@
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
-<!--<button class="bloc-button btn btn-d scrollToTop " onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></button> -->
+<a class="bloc-button btn btn-d scrollToTop " onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a> -->
 <!-- ScrollToTop Button END-->
 
 
