--- a/page2.html
+++ b/page2.html
@@ -14,9 +14,9 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js" defer ></script>
-	<script src="./js/bootstrap.min.js" defer ></script>
-	<script src="./js/blocs.min.js" defer ></script>
+	<script src="./js/jquery-2.1.0.js" defer ></script>
+	<script src="./js/bootstrap.js" defer ></script>
+	<script src="./js/blocs.js" defer ></script>
 	<script src="./js/jqBootstrapValidation.js" defer ></script>
 	<script src="./js/formHandler.js" defer ></script>
     <title>Contact</title>
@@ -121,7 +121,7 @@
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop showScrollTop  " onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a> -->
+<a class="bloc-button btn btn-d scrollToTop " onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a> -->
 <!-- ScrollToTop Button END-->
 
 
