--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="keywords" content="la Panthère, Lyon, seo, site web, site internet, agence design,">
+    <meta name="description" content="Agence La Panthère: agence de web design lyonnaise aidant les entreprises à devenir attractives sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index, follow">
 	
