--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, site internet</div>
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt=" logo de l'agence de web design La Panthère à Lyon  " height="40" /></a>
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, site internet</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -84,7 +82,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2><img alt="titre bloc2" src="img/title.png" /></h2>
+				<h2> L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visible sur Internet</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -124,8 +122,8 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="citation bloc 2" src="img/citation.png" />
-
+				<blockquote> "L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'integrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon" </blockquote>
+				<figcaption>Maxime Guibard, PDG de À vos fourchettes</figcaption>
 			</div>
 		</div>
 	</div>
@@ -153,8 +151,8 @@
 <section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col-sm-12 text-center">
-			<h2><img alt="Title bloc 4" src="img/title2.png" /></h2>
+			<div class="col-sm-12 text-center width-2">
+			<h2 >Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -222,7 +220,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center grey">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
