--- a/page2.html
+++ b/page2.html
@@ -105,7 +105,7 @@
 						<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 						</label>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine " type="submit">
 						Envoyer
 					</button>
 				</form>
@@ -130,7 +130,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center grey">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
